# zathura-note

./: license  meson.build  readme.md
data/: de.marvinborner.zathura-note.desktop  de.marvinborner.zathura-note.metainfo.xml  meson.build
zathura-note/: cairo_jpg.c  cairo_jpg.h  note.c  plugin.c  plugin.h
